--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.3",
-    "bootstrap": "^5.1.0"
+    "bootstrap": "^5.1.0",
+    "vue2-dropzone": "^3.6.0"
   }
 }
