--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,15 @@
+<ifModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE text/plain
+    AddOutputFilterByType DEFLATE text/html
+    AddOutputFilterByType DEFLATE text/xml
+    AddOutputFilterByType DEFLATE text/css
+    AddOutputFilterByType DEFLATE application/xml
+    AddOutputFilterByType DEFLATE application/xhtml+xml
+    AddOutputFilterByType DEFLATE application/rss+xml
+    AddOutputFilterByType DEFLATE application/javascript
+    AddOutputFilterByType DEFLATE application/x-javascript
+</ifModule>
+
 RewriteEngine on
 RewriteCond %{REQUEST_URI} !\.(gif|jpg|png|webp|ico|js|css|svg)$
 RewriteCond %{REQUEST_FILENAME} !-f
